--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">Rekrutmen Anggota</string>
+    <string name="textview">TextView</string>
+    <string name="textview">TextView</string>
+    <string name="textview">TextView</string>
+    <string name="textview">TextView</string>
+    <string name="textview">TextView</string>
+    <string name="textview">TextView</string>
+    <string name="nim">NIM :</string>
+    <string name="nama">Nama :</string>
+    <string name="tempat_lahir">Tempat Lahir :</string>
+    <string name="tanggal_lahir">Tanggal Lahir :</string>
+    <string name="alamat">Alamat :</string>
+    <string name="motivasi">Motivasi :</string>
+    <string name="share">Share</string>
+    <string name="todo">TODO</string>
+    <string name="todo">TODO</string>
 </resources>
